--- a/DOM Fundamentals/Guess Project/guess.css
+++ b/DOM Fundamentals/Guess Project/guess.css
@@ -4,12 +4,12 @@
 }
 
 html {
-    background-color: black;
+    background-color: #0000;
     font-family: my;
 
 }
 .container {
-    background-color: black;
+    background-color: #0000;
     color: white;
     width: 100%;
     height: 100%;
